--- a/sass/modules/_card.sass
+++ b/sass/modules/_card.sass
@@ -1,25 +1,37 @@
+.card
+	border: none
+	border-radius: 0
+	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
+
+	.card-header
+		background-color: $card-bg
+		border-bottom: 0
+		padding-bottom: 0
+
+		&:first-child
+			border-radius: 0
+
+	.card-block
+		padding-top: 0
+
+	.card-footer
+		border-radius: 0
+		background: $gray-lighter
+
+	img
+		width: calc(100% + 2.5rem)
+		height: auto
+		margin: 0 -1.25rem
+
+// Card columns
 .card-columns
 	column-count: 1
-	text-align: center
+	column-gap: 0
+	texxt-align: center
 
 	.card
 		width: calc(100% - 1rem)
-		border: none
-		border-radius: 0
-		text-align: left
-		box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)	
-
-		.card-title
-			font-family: "Oswald", "sans-serif"
-
-		img
-			width: calc(100% + 2.5rem)
-			height: auto
-			margin: 0 -1.25rem
-
-		footer
-			background: $gray-lighter
-			margin-top: 0
+		margin: .5rem
 
 // small to medium screens
 @include media-breakpoint-up(sm)
