--- a/sass/modules/_social.sass
+++ b/sass/modules/_social.sass
@@ -1,8 +1,8 @@
 .social-icons
+	display: inline-block
+	position: relative
 	width: 100%
 	list-style: none
-	display: block
-	position: relative
 	overflow: hidden
 	padding: 0
 
@@ -34,16 +34,7 @@
 // small to medium screens
 @include media-breakpoint-up(md)
 	.social-icons
-		width: 100%
-		list-style: none
-		position: relative
-		display: flex
-		justify-content: space-around
-		flex-wrap: wrap
+		width: auto
 
 		li
 			min-width: 3rem
-			width: auto
-			text-align: center
-			padding: 1rem
-			color: inherit
