--- a/sass/modules/_typography.sass
+++ b/sass/modules/_typography.sass
@@ -1,3 +1,13 @@
 h1, h2, h3, h4, h5, h6
 	font:
-		family: "Oswald", "Helvetica", "sans-serif"
+		family: "Oswald", "Helvetica", "Arial", "sans-serif"
+		weight: 300
+
+a
+	color: $brand-primary
+	text-decoration: none
+	transition: all .2s ease-in-out
+
+	&:hover, &:focus, &:active
+		text-decoration: none
+		color: darken($brand-primary, 20%)
