--- a/sass/style.sass
+++ b/sass/style.sass
@@ -31,4 +31,8 @@
 
 // Pages
 @import "pages/page-frontpage"
+@import "pages/page-about"
+@import "pages/page-services"
+@import "pages/page-blog"
 @import "pages/page-contact"
+@import "pages/page-single"
