--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -13,13 +13,20 @@ body
 	margin: 0 auto
 
 .overlay
-	position: absolute
+	position: fixed
+	display: none
+	height: 100%
+	width: 100%
 	top: 0
 	left: 0
 	right: 0
 	bottom: 0
-	background-color: rgba(0, 0, 0, .3)
+	background-color: rgba(0, 0, 0, 0.4)
 	z-index: 1000
+
+.block-scroll
+	overflow: hidden
+	height: 100%
 
 // small to medium screens
 @include media-breakpoint-up(sm)
