Updated mobile menu

--- a/style.css
+++ b/style.css
@@ -3632,11 +3632,9 @@ header nav .container-fluid .navbar-nav {
   left: -13rem;
   top: 0;
   height: 100vh;
-  transition: -webkit-transform 5s ease-in-out;
-  transition: transform 5s ease-in-out;
-  transition: transform 5s ease-in-out, -webkit-transform 5s ease-in-out;
   box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2);
   z-index: 1030;
+  overflow: auto;
 }
 
 header nav .container-fluid .navbar-nav .nav-item {
@@ -3652,6 +3650,7 @@ header nav .container-fluid .navbar-nav .nav-item a {
 }
 
 .fixed-top {
+  transition: all 0.3s ease-in-out;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
