--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -36,9 +36,9 @@ header
 				left: -13rem
 				top: 0
 				height: 100vh
-				transition: transform 5s ease-in-out
 				box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2)
 				z-index: 1030
+				overflow: auto
 
 				.nav-item
 					display: block
@@ -52,6 +52,7 @@ header
 
 
 .fixed-top
+	transition: all 0.3s ease-in-out
 	background-color: rgba(255, 255, 255, 0.9)
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
 
