Improved header navigation design
Pushed social icons to the right on mobile

--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -21,10 +21,14 @@ header
 
 			// Social icons
 			.header-social
-				flex: 1
+				flex: 2
 				max-height: 50px
 				overflow: hidden
 				color: $gray
+
+				.social-icons
+					width: auto
+					float: right
 
 			// Menu
 			.navbar-nav
