--- a/style.css
+++ b/style.css
@@ -3615,12 +3615,17 @@ header nav .container-fluid .navbar-toggler:focus {
 }
 
 header nav .container-fluid .header-social {
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
   max-height: 50px;
   overflow: hidden;
   color: #55595c;
+}
+
+header nav .container-fluid .header-social .social-icons {
+  width: auto;
+  float: right;
 }
 
 header nav .container-fluid .navbar-nav {
