--- a/sass/_bootstrap.sass
+++ b/sass/_bootstrap.sass
@@ -4,11 +4,12 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-// Core variables and mixins
+// Variables
 @import "../src/bootstrap/scss/variables"
-@import "../src/bootstrap/scss/mixins"
 @import "variables"
 
+// Mixins
+@import "../src/bootstrap/scss/mixins"
 
 // Reset and dependencies
 @import "../src/bootstrap/scss/normalize"
