--- a/sass/style.sass
+++ b/sass/style.sass
@@ -33,6 +33,7 @@
 @import "pages/page-frontpage"
 @import "pages/page-about"
 @import "pages/page-services"
+@import "pages/page-portfolio"
 @import "pages/page-blog"
 @import "pages/page-contact"
 @import "pages/page-single"
