Small design updates

--- a/sass/modules/_card.sass
+++ b/sass/modules/_card.sass
@@ -34,7 +34,7 @@
 		margin: .5rem
 
 // small to medium screens
-@include media-breakpoint-up(sm)
+@include media-breakpoint-up(md)
 	.card-columns
 		column-count: 2
 
