--- a/sass/pages/_page-portfolio.sass
+++ b/sass/pages/_page-portfolio.sass
@@ -6,8 +6,11 @@
             margin: .5rem 0
             text-align: center
 
+            .card-title
+                text-align: left
+
 @include media-breakpoint-up(md)
-    .page-services .card-columns
+    .page-portfolio .card-columns
         column-count: 2
 
         .card
@@ -15,5 +18,5 @@
             margin: .5rem
 
 @include media-breakpoint-up(lg)
-    .page-services .card-columns
+    .page-portfolio .card-columns
         column-count: 3
