--- a/style.css
+++ b/style.css
@@ -3564,15 +3564,71 @@ body {
   }
 }
 
+/* cyrillic-ext */
 @font-face {
-  font-family: 'Oswald';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: local("Oswald Regular"), local("Oswald-Regular"), url(fonts/Oswald/Oswald-Regular.ttf) format("truetype");
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/ek4gzZ-GeXAPcSbHtCeQI_esZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
+/* greek-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/-2n2p-_Y08sg57CNWQfKNvesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+1F00-1FFF;
+}
+
+/* greek */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/u0TOpm082MNkS5K0Q4rhqvesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0370-03FF;
+}
+
+/* vietnamese */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/NdF9MtnOpLzo-noMoG0miPesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/Fcx7Wwv8OzT71A3E1XOAjvesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v15/CWB0XYA8bzo0kSThX0UTuA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Oswald", "Helvetica", "Arial", "sans-serif";
+  font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
   font-weight: 300;
 }
 
@@ -3654,6 +3710,20 @@ header nav .container-fluid .navbar-nav .nav-item a {
   font-size: 1rem;
 }
 
+.header-wrapper {
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 1rem;
+}
+
+.header-wrapper .header-title {
+  font-size: 50px;
+  font-weight: 100;
+  color: #f7f7f9;
+  text-transform: uppercase;
+}
+
 .fixed-top {
   transition: all 0.3s ease-in-out;
   background-color: rgba(255, 255, 255, 0.9);
@@ -3695,6 +3765,9 @@ header nav .container-fluid .navbar-nav .nav-item a {
   header nav .container-fluid .navbar-nav .nav-item:first-child {
     margin-left: 0;
   }
+  header .header-wrapper {
+    right: 20%;
+  }
 }
 
 .social-icons {
@@ -3720,23 +3793,29 @@ header nav .container-fluid .navbar-nav .nav-item a {
 }
 
 .facebook:hover {
-  color: #3e5b99;
+  color: #3e5b99 !important;
 }
 
 .twitter:hover {
-  color: #1da1f2;
+  color: #1da1f2 !important;
 }
 
 .google-plus:hover {
-  color: #db4437;
+  color: #db4437 !important;
 }
 
 .linkedin:hover {
-  color: #1d87bd;
+  color: #1d87bd !important;
 }
 
 @media (min-width: 768px) {
   .social-icons {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     width: auto;
   }
   .social-icons li {
@@ -3816,7 +3895,7 @@ header nav .container-fluid .navbar-nav .nav-item a {
   margin: .5rem;
 }
 
-@media (min-width: 544px) {
+@media (min-width: 768px) {
   .card-columns {
     -webkit-column-count: 2;
        -moz-column-count: 2;
@@ -3840,8 +3919,26 @@ header nav .container-fluid .navbar-nav .nav-item a {
   text-align: center;
 }
 
+.footer a {
+  color: #eceeef;
+  font-weight: bold;
+  transition: ease-in-out .1s;
+}
+
+.footer a:hover, .footer a:active, .footer a:focus {
+  color: #55595c;
+  text-decoration: none;
+}
+
 .footer .container-fluid {
   width: 100%;
+}
+
+.footer .footer-menu {
+  list-style: none;
+  overflow: hidden;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 .footer .footer-menu li {
@@ -3855,38 +3952,24 @@ header nav .container-fluid .navbar-nav .nav-item a {
   font-size: 1rem;
 }
 
-.footer a {
-  color: #eceeef;
-  font-weight: bold;
-  transition: ease-in-out .1s;
-}
-
-.footer a:hover, .footer a:active, .footer a:focus {
-  color: #55595c;
-  text-decoration: none;
-}
-
-.footer ul {
-  list-style: none;
-  overflow: hidden;
-  margin-bottom: 0;
-  padding: 0;
-}
-
 .footer .footer-subtitle {
   color: white;
 }
 
-.footer .footer-follow-us {
+.footer .social-icons {
   list-style: none;
   overflow: hidden;
   margin-bottom: 2rem;
 }
 
-.footer .footer-follow-us li {
+.footer .social-icons li {
   float: left;
   width: 25%;
   text-align: center;
+}
+
+.footer .social-icons li a {
+  color: #eceeef;
 }
 
 @media (min-width: 544px) {
@@ -3894,6 +3977,9 @@ header nav .container-fluid .navbar-nav .nav-item a {
     width: calc(100%/3);
     float: left;
     text-align: center;
+  }
+  .footer .social-icons {
+    margin-bottom: 0;
   }
 }
 
@@ -4033,20 +4119,24 @@ header nav .container-fluid .navbar-nav .nav-item a {
   text-align: center;
 }
 
+.page-portfolio .card-columns .card .card-title {
+  text-align: left;
+}
+
 @media (min-width: 768px) {
-  .page-services .card-columns {
+  .page-portfolio .card-columns {
     -webkit-column-count: 2;
        -moz-column-count: 2;
             column-count: 2;
   }
-  .page-services .card-columns .card {
+  .page-portfolio .card-columns .card {
     width: calc(100% - 1rem);
     margin: .5rem;
   }
 }
 
 @media (min-width: 992px) {
-  .page-services .card-columns {
+  .page-portfolio .card-columns {
     -webkit-column-count: 3;
        -moz-column-count: 3;
             column-count: 3;
