--- a/sass/modules/_footer.sass
+++ b/sass/modules/_footer.sass
@@ -5,19 +5,6 @@
 	color: $gray-light
 	text-align: center
 
-	.container-fluid
-		width: 100%
-
-	.footer-menu
-		li
-			width: 100%
-			text-align: center
-			padding: 0
-			line-height: $line-height * 1.4
-
-			a
-				font-size: 1rem
-
 	a
 		color: $gray-lighter
 		font-weight: bold
@@ -27,16 +14,28 @@
 			color: $gray
 			text-decoration: none
 
-	ul
+	.container-fluid
+		width: 100%
+
+	.footer-menu
 		list-style: none
 		overflow: hidden
 		margin-bottom: 0
 		padding: 0
 
+		li
+			width: 100%
+			text-align: center
+			padding: 0
+			line-height: $line-height * 1.4
+
+			a
+				font-size: 1rem
+
 	.footer-subtitle
 		color: white
 
-	.footer-follow-us
+	.social-icons
 		list-style: none
 		overflow: hidden
 		margin-bottom: 2rem
@@ -46,6 +45,9 @@
 			width: 25%
 			text-align: center
 
+			a
+				color: $gray-lighter
+
 // small to medium screens
 @include media-breakpoint-up(sm)
 	.footer
@@ -53,6 +55,9 @@
 			width: calc(100%/3)
 			float: left
 			text-align: center
+
+		.social-icons
+			margin-bottom: 0
 
 // medium screens
 @include media-breakpoint-up(md)
