--- a/sass/modules/_social.sass
+++ b/sass/modules/_social.sass
@@ -17,23 +17,24 @@
 			color: inherit
 			transition: all 0.2s ease-in-out
 
-
-
 .facebook:hover
-	color: rgba(62, 91, 153, 1)
+	color: rgba(62, 91, 153, 1) !important
 
 .twitter:hover
-	color: rgba(29, 161, 242, 1)
+	color: rgba(29, 161, 242, 1) !important
 
 .google-plus:hover
-	color: rgba(219, 68, 55, 1)
+	color: rgba(219, 68, 55, 1) !important
 
 .linkedin:hover
-	color: rgba(29, 135, 189, 1)
+	color: rgba(29, 135, 189, 1) !important
 
 // small to medium screens
 @include media-breakpoint-up(md)
 	.social-icons
+		//border: 1px solid red
+		display: flex
+		justify-content: space-around
 		width: auto
 
 		li
