--- a/sass/modules/_typography.sass
+++ b/sass/modules/_typography.sass
@@ -1,6 +1,6 @@
 h1, h2, h3, h4, h5, h6
 	font:
-		family: "Oswald", "Helvetica", "Arial", "sans-serif"
+		family: "Roboto", "Helvetica", "Arial", "sans-serif"
 		weight: 300
 
 a
