--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -373,7 +373,7 @@ $btn-primary-border:               $btn-primary-bg
 //$navbar-dark-active-color:          rgba(255,255,255,1) !default;
 //$navbar-dark-disabled-color:        rgba(255,255,255,.25) !default;
 
-$navbar-light-color:                  #444;
+$navbar-light-color:                  #444
 //$navbar-light-hover-color:          rgba(0,0,0,.6) !default;
 //$navbar-light-active-color:         rgba(0,0,0,.8) !default;
 //$navbar-light-disabled-color:       rgba(0,0,0,.15) !default;
