--- a/sass/modules/_card.sass
+++ b/sass/modules/_card.sass
@@ -11,6 +11,11 @@
 		&:first-child
 			border-radius: 0
 
+		.blog-post-details
+			//border: 1px solid red
+			font-size: 0.9rem
+			margin-top: -.6rem
+
 	.card-block
 		padding-top: 0
 
