--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,30 +10,30 @@
  */
 
 // Bootstrap
-@import "bootstrap"
+@import 'bootstrap'
 
 // Font Awesome
-//@import "font-awesome"
+@import 'font-awesome'
 
 // General
-@import "base"
+@import 'base'
 
 // Modules
-@import "modules/fonts"
-@import "modules/typography"
-@import "modules/header"
-@import "modules/social"
-@import "modules/navbar"
-@import "modules/buttons"
-@import "modules/card"
-@import "modules/footer"
-@import "modules/inputs"
+@import 'modules/fonts'
+@import 'modules/typography'
+@import 'modules/header'
+@import 'modules/social'
+@import 'modules/navbar'
+@import 'modules/buttons'
+@import 'modules/card'
+@import 'modules/footer'
+@import 'modules/inputs'
 
 // Pages
-@import "pages/page-frontpage"
-@import "pages/page-about"
-@import "pages/page-services"
-@import "pages/page-portfolio"
-@import "pages/page-blog"
-@import "pages/page-contact"
-@import "pages/page-single"
+@import 'pages/page-frontpage'
+@import 'pages/page-about'
+@import 'pages/page-services'
+@import 'pages/page-portfolio'
+@import 'pages/page-blog'
+@import 'pages/page-contact'
+@import 'pages/page-single'
