--- a/css/_font-awesome.sass
+++ b/css/_font-awesome.sass
@@ -13,11 +13,7 @@ $fa-font-path: "../cornelius/src/font-awesome/fonts"
 @font-face
     font-family: 'FontAwesome'
     src: url('#{$fa-font-path}/fontawesome-webfont.eot')
-    src: url('#{$fa-font-path}/fontawesome-webfont.eot?#iefix&v=#{$fa-version}') format('embedded-opentype'),
-        url('#{$fa-font-path}/fontawesome-webfont.woff2') format('woff2'),
-        url('#{$fa-font-path}/fontawesome-webfont.woff?') format('woff'),
-        url('#{$fa-font-path}/fontawesome-webfont.ttf') format('truetype'),
-        url('#{$fa-font-path}/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular') format('svg')
+    src: url('#{$fa-font-path}/fontawesome-webfont.eot?#iefix&v=#{$fa-version}') format('embedded-opentype'), url('#{$fa-font-path}/fontawesome-webfont.woff2') format('woff2'), url('#{$fa-font-path}/fontawesome-webfont.woff?') format('woff'), url('#{$fa-font-path}/fontawesome-webfont.ttf') format('truetype'), url('#{$fa-font-path}/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular') format('svg')
 
 // Import FA styles
 @import "../src/font-awesome/scss/mixins"
