--- a/css/modules/_buttons.sass
+++ b/css/modules/_buttons.sass
@@ -7,7 +7,7 @@
 	background-color: $brand-primary
 	color: white
 	transition: all 200ms cubic-bezier(0.25, 0.39, 0.39, 2.01)
-	box-shadow: 0px 15px 10px -10px rgba(0,0,0,0.4)
+	box-shadow: 0px 15px 10px -10px rgba(black, 0.2)
 
 	&:hover
 		background-color: $brand-primary
