--- a/css/style.sass
+++ b/css/style.sass
@@ -5,8 +5,8 @@
  *	Author: Corneliu Cirlan
  *	Author URI: http://www.corneliucirlan.com
  *	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
- *	Version: 3.4
- *	Tags: responsive, light, material design, materialize, framework, parallax
+ *	Version: 3.5
+ *	Tags: responsive, light, material design, bootstrap framework, framework, sass
  */
 
 // Bootstrap
@@ -18,7 +18,11 @@
 // General
 @import 'base'
 
+// Mobile menu
+@import '../libs/mdstrap/jquery-mdstrap'
+
 // Modules
+@import 'modules/keyframes'
 @import 'modules/fonts'
 @import 'modules/typography'
 @import 'modules/header'
