--- a/css/modules/_card.sass
+++ b/css/modules/_card.sass
@@ -1,7 +1,8 @@
 .card
 	border: none
+	border: 1px solid #ddd
 	border-radius: 0
-	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
+	//box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
 
 	.card-header
 		background-color: $card-bg
