--- a/css/modules/_footer.sass
+++ b/css/modules/_footer.sass
@@ -65,6 +65,7 @@
 		width: calc(100%/3)
 
 // large screens
-@include media-breakpoint-up(lg)
+//@include media-breakpoint-up(lg)
+@media (min-width: 1700px)
 	.footer .footer-menu li
 		width: calc(100%/6)
