--- a/css/pages/_page-about.sass
+++ b/css/pages/_page-about.sass
@@ -7,6 +7,7 @@
     .card
         text-align: center
         box-shadow: none
+        border: none
 
         h3
             text-transform: uppercase
