Fixed about page

--- a/css/pages/_page-about.sass
+++ b/css/pages/_page-about.sass
@@ -1,16 +1,12 @@
-.page-about .card .card-title
-    text-align: center
+.page-about .card
+    box-shadow: none
+    border: none
 
-.page-about .skills .card-columns
-    column-count: 2
-
-    .card
+    h2, h3, h4
         text-align: center
-        box-shadow: none
-        border: none
 
-        h3
-            text-transform: uppercase
+    h3
+        text-transform: uppercase
 
 
 // small to medium screens
