--- a/css/pages/_page-services.sass
+++ b/css/pages/_page-services.sass
@@ -4,7 +4,7 @@
     .card
         width: 100%
         margin: 0.5rem 0
-        text-align: center
+        text-align: justify
 
 @include media-breakpoint-up(md)
     .page-services .card-columns
@@ -17,16 +17,3 @@
 @include media-breakpoint-up(lg)
     .page-services .card-columns
         column-count: 3
-
-//@include media-breakpoint-up(md)
-//    .page-services .card-columns
-//        column-count: 2
-//
-//        .card
-//            width: calc(100% - 1rem)
-//            margin: .5rem
-//
-//@include media-breakpoint-up(lg)
-//    .page-services .card-columns
-//        column-count: 3
-//
